examples/good/6_error_handling.xp
x = 1 / 0; # this will result in an error (later)
