examples/bad/6_error_handling.xp
# dividing by zero results in an error
main = 1 / 0;
